# lattice

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  notify-navbot.yml
benchmarks/miniapi/: pyproject.toml  run-benchmark.sh  score.py
benchmarks/miniapi/.lattice/soul/: AGENTS.md  MEMORY.md  SOUL.md  STATE.md
benchmarks/miniapi/results/: score-20260408-215056.txt  score-20260409-082957.txt
benchmarks/miniapi/src/miniapi/: __init__.py  app.py  projects.py  search.py  stats.py  store.py  tags.py  tasks.py  users.py
benchmarks/miniapi/tests/: conftest.py  test_projects.py  test_search.py  test_stats.py  test_tags.py  test_tasks.py  test_users.py
benchmarks/miniapi/tickets/: 01-users.md  02-projects.md  03-tasks.md  04-tags.md  05-search.md  06-stats.md
scripts/: quickstart.sh
src/lattice/: __init__.py  logging.py
tests/: conftest.py  test_config_connectors.py  test_logging.py
tests/adapters/: test_python_adapter.py  test_typescript_adapter.py
tests/api/: test_command_endpoint.py  test_stdio.py
tests/cli/: test_commands.py  test_correct_command.py  test_hint_command.py  test_hooks_command.py  test_incremental_doc.py  test_json_flag.py  test_queue_command.py  test_skip_command.py  test_status_command.py  test_status_queue.py
tests/cross_cutting/: test_analyzer.py  test_detectors.py  test_schema.py  test_writer.py
tests/fleet/: test_assembler.py  test_checkpoint.py  test_cli_map_doc.py  test_dispatcher.py  test_planner.py  test_prompt.py  test_skeleton.py
tests/graph/: test_builder.py  test_config_wiring.py  test_entry_points.py  test_serializer.py
tests/integration/: test_e2e_smoke.py  test_orchestrator_e2e.py
tests/llm/: test_config.py  test_factory.py
tests/models/: test_adapter.py  test_analysis.py  test_orchestrator.py  test_session.py
tests/orchestrator/: test_breaker.py  test_context.py  (+8 more)
ts_parser/: package-lock.json  package.json  parse_imports.js
(+201 files in other folders)
